--- a/design/style.css
+++ b/design/style.css
@@ -210,3 +210,87 @@ footer{
 .coder:hover{
     color: var(--link-color);
 }
+@media(max-width:800px){
+    .theme-button{
+        font-size: 10px;
+        padding: 2px 8px;
+    }
+    h1{
+        font-size: 45px;
+    }
+    h3{
+        font-size: 18px;
+    }
+    p{
+        font-size: 16px;
+        line-height: 1.2;
+        margin: 0;
+        padding: 15px;
+    }
+    .benefits{
+        display: block;
+        font-size: 14px;
+    }
+    ul{
+        line-height: 1.2;
+    }
+    h2{
+        font-size: 35px;
+        margin: 0;
+        padding: 30px 0;
+    }
+    .wiki-link,
+    .digital-wiki-link{
+        font-size: 10px;
+        margin: 20px;
+    }
+    .traditional-gallery{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+        margin: 20px -10px;
+        padding: 20px;
+    }
+    .red-vase:hover,
+    .green-vase:hover,
+    .seasons1-vase:hover,
+    .seasons2-vase:hover,
+    .lion-portret:hover,
+    .koi-fish-side:hover,
+    .wealth-side:hover,
+    .geisha1-vase:hover,
+    .geisha2-vase:hover{ 
+        margin: 0;
+        transform: none;   
+    }
+    .digital-gallery{
+        margin: 0 -10px ;
+        padding: 0;
+        max-width:max-content;
+    }
+    .blue-birds,
+    .girl-portret{
+       border-radius: 14px;
+       transition: transform 250ms ease-in-out;
+       width: 40%;
+}
+   .blue-birds:hover,
+   .girl-portret:hover{
+       filter: brightness(110%); 
+       transform: none;
+}
+    .ending-quote{
+        font-size: 18px;
+        line-height: 1.2;
+        margin: 50px 20px ;
+}
+   .learn-link{
+    font-size: 18px;
+    margin: 20px;
+    max-width: 80%;
+    padding: 12px 20px;
+   }
+   footer{
+    font-size: 12px;
+   } 
+}
